@@ -92,6 +92,8 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2017
   Bug Fixes
 
   - (add new items here)
+  - Fix Fl_PNG_Image error handling. An error was potentially caused
+    by error handling of the image library with setjmp/longjmp.
   - Fix Fl_Browser background and text color parsing (STR #3376).
   - Fix Windows CreateDC/DeleteDC mismatch (STR #3373).
   - Fix Fl_Tabs label drawing for Fl_Window children (STR #3075).
